--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mynodes/generate-image.git"
+    "url": "git+github.com/adevk/generate-text-image-node.git"
   },
   "packageManager": "pnpm@9.15.3",
   "main": "index.js",
@@ -24,7 +24,7 @@
     "format": "prettier nodes credentials --write",
     "lint": "eslint nodes credentials package.json",
     "lintfix": "eslint nodes credentials package.json --fix",
-    "prepublishOnly": "pnpm build && pnpm lint -c .eslintrc.prepublish.js nodes credentials package.json"
+    "prepublishOnly": "pnpm build"
   },
   "files": [
     "dist"
