--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+github.com/adevk/generate-text-image-node.git"
+    "url": "git+github.com/adevk/generate-text-image-node"
   },
   "packageManager": "pnpm@9.15.3",
   "main": "index.js",
